--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,13 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
+@import './tools/vars';
 
-// Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './base/common';
+@import './components/button';
+
+@import './layout/hero-header';
+@import './layout/products';
+@import './layout/about';
+@import './layout/advantages';
+@import './layout/gallery';
+@import './layout/customer-reviews';
+@import './layout/contacts';
+@import './layout/footer';
