--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -4,13 +4,13 @@
     <h2 class="section-title visually-hidden">Our contacts</h2>
 
     <ul class="contacts">
-      <li class="contacts__card">
-        <div class="contacts__item">
+      <li class="contacts__item">
+        <div class="contacts__card">
           <p class="contacts__name">CAFE</p>
         </div>
       </li>
-      <li class="contacts__card"></li>
-      <li class="contacts__card"></li>
+      <li class="contacts__item"></li>
+      <li class="contacts__item"></li>
     </ul>
   </div>
 </section>
