--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -1,13 +1,12 @@
 :root {
-    --white-text-color: #FFFFFF;
-    --black-text-color: #000000;
-    --grey-text-color: #907E82;
-    --pink-text-color: #FFA5BA;
-    --red-text-color: #D41443;
+    --primary-text-color: #FFFFFF;
+    --basic-text-color: #000000;
+    --secondary-text-color: #907E82;
+    --main-text-color: #FFA5BA;
     --accent-text-color: #D41443;
-    --pink-bg-color: #FFB8CA;
-    --white-bg-color: #E5E5E5;
-    --pale-pink-bg-color: #FFF5F6;
+    --main-bg-color: #FFB8CA;
+    --base-bg-color: #E5E5E5;
+    --secondary-bg-color: #FFF5F6;
     --underline-color: #E1E1E1;
 
     --btn-accent-bg-color: #ECEBEB;
