--- a/src/partials/our-location-modal.html
+++ b/src/partials/our-location-modal.html
@@ -1,64 +1,75 @@
-<button class="btn__modal" type="button" data-modal-open>our-location-modal</button>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <button class="btn__modal" type="button" data-modal-open>our-location-modal</button>
 
-<!-- start модальное окно  -->
-<div class="backdrop is-hidden" data-modal>
-  <div class="modal">
-    <button class="modal__close-button" type="button" data-modal-close>
-      <!-- <svg class="modal__close-icon" width="18" height="18">
+    <!-- start модальное окно  -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal__close-button" type="button" data-modal-close>
+          <!-- <svg class="modal__close-icon" width="18" height="18">
         <use href="./images/icons.svg#icon-close"></use>
       </svg> -->
-    </button>
-    <form class="modal-form">
-      <h2 class="modal-form__header">Оставьте свои данные, мы вам перезвоним</h2>
+        </button>
+        <form class="modal-form">
+          <h2 class="modal-form__header">Оставьте свои данные, мы вам перезвоним</h2>
 
-      <label class="modal-form__box">
-        <span class="modal-form__label">Имя</span>
-        <span class="modal-form__thumb">
-          <input class="modal-form__input" type="text" name="name" />
-          <!-- <svg class="modal-form__input-icon" width="18" height="18">
+          <label class="modal-form__box">
+            <span class="modal-form__label">Имя</span>
+            <span class="modal-form__thumb">
+              <input class="modal-form__input" type="text" name="name" />
+              <!-- <svg class="modal-form__input-icon" width="18" height="18">
             <use href="./images/icons.svg#icon-person"></use>
           </svg> -->
-        </span>
-      </label>
+            </span>
+          </label>
 
-      <label class="modal-form__box">
-        <span class="modal-form__label">Телефон</span>
-        <span class="modal-form__thumb">
-          <input class="modal-form__input" type="tel" name="phone" />
-          <!-- <svg class="modal-form__input-icon" width="18" height="18">
+          <label class="modal-form__box">
+            <span class="modal-form__label">Телефон</span>
+            <span class="modal-form__thumb">
+              <input class="modal-form__input" type="tel" name="phone" />
+              <!-- <svg class="modal-form__input-icon" width="18" height="18">
             <use href="./images/icons.svg#icon-phone"></use>
           </svg> -->
-        </span>
-      </label>
-      <label class="modal-form__box">
-        <span class="modal-form__label">Почта</span>
-        <span class="modal-form__thumb">
-          <input class="modal-form__input" type="email" name="email" />
-          <!-- <svg class="modal-form__input-icon" width="18" height="18">
+            </span>
+          </label>
+          <label class="modal-form__box">
+            <span class="modal-form__label">Почта</span>
+            <span class="modal-form__thumb">
+              <input class="modal-form__input" type="email" name="email" />
+              <!-- <svg class="modal-form__input-icon" width="18" height="18">
             <use href="./images/icons.svg#icon-email"></use>
           </svg> -->
-        </span>
-      </label>
+            </span>
+          </label>
 
-      <label class="modal-form__box modal-form__box--comment">
-        <span class="modal-form__label">Комментарий</span>
-        <textarea
-          class="modal-form__textarea"
-          placeholder="Введите текст"
-          name="comment"
-        ></textarea>
-      </label>
+          <label class="modal-form__box modal-form__box--comment">
+            <span class="modal-form__label">Комментарий</span>
+            <textarea
+              class="modal-form__textarea"
+              placeholder="Введите текст"
+              name="comment"
+            ></textarea>
+          </label>
 
-      <label class="modal-form__checkbox-label">
-        <input class="checkbox visually-hidden" type="checkbox" name="checkbox" />
-        <span class="checkbox__icon"></span>
-        <span>Соглашаюсь с рассылкой и принимаю <a href="#">Условия договора</a></span>
-      </label>
+          <label class="modal-form__checkbox-label">
+            <input class="checkbox visually-hidden" type="checkbox" name="checkbox" />
+            <span class="checkbox__icon"></span>
+            <span>Соглашаюсь с рассылкой и принимаю <a href="#">Условия договора</a></span>
+          </label>
 
-      <div class="modal-form__submit-button-box">
-        <button class="modal-form__submit-button" type="submit">Отправить</button>
+          <div class="modal-form__submit-button-box">
+            <button class="modal-form__submit-button" type="submit">Отправить</button>
+          </div>
+        </form>
       </div>
-    </form>
-  </div>
-</div>
-<!-- end модальное окно  -->
+    </div>
+    <!-- end модальное окно  -->
+  </body>
+</html>
