--- a/src/sass/layout/_our-location-modal.scss
+++ b/src/sass/layout/_our-location-modal.scss
@@ -14,7 +14,7 @@
     opacity: 1;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    @media screen and (min-width: $mobile) {
+    @media screen and (min-width: 480px) {
         padding: 0;
     }
 }
@@ -22,7 +22,7 @@
 .backdrop.is-hidden .modal {
     opacity: 0;
 
-    @media screen and (min-width: $mobile) {
+    @media screen and (min-width: 480px) {
         transform: translate(-50%, -50%) scale(0.9);
     }
 }
@@ -40,7 +40,7 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
         opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    @media screen and (min-width: $mobile) {
+    @media screen and (min-width: 480px) {
         max-width: 450px;
         position: absolute;
         top: 50%;
@@ -48,7 +48,7 @@
         transform: translate(-50%, -50%) scale(1);
     }
 
-    @media screen and (min-width: $desktop) {
+    @media screen and (min-width: 1280px) {
         max-width: 528px;
     }
 }
@@ -68,7 +68,7 @@
 
     &:hover,
     &:focus {
-        fill: $accent-color;
+        fill: blue;
     }
 }
 
@@ -93,9 +93,9 @@
     text-align: center;
     letter-spacing: 0.03em;
 
-    color: $header-color;
+    color: red;
 
-    @media screen and (min-width: $desktop) {
+    @media screen and (min-width: 1280px) {
         line-height: 1.15;
     }
 }
@@ -109,7 +109,7 @@
     line-height: 1.16;
     letter-spacing: 0.01em;
 
-    color: $main-text-color;
+    color: black;
 }
 
 .modal-form__label {
@@ -132,7 +132,7 @@
     transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:focus {
-        outline-color: $accent-color;
+        outline-color: blue;
     }
 }
 
@@ -140,11 +140,11 @@
     position: absolute;
     top: 11px;
     left: 12px;
-    fill: $header-color;
+    fill: red;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     .modal-input:focus+& {
-        fill: $accent-color;
+        fill: blue;
     }
 }
 
@@ -163,7 +163,7 @@
     border-radius: 4px;
 
     &:focus {
-        outline-color: $accent-color;
+        outline-color: blue;
     }
 
     &::placeholder {
@@ -185,7 +185,7 @@
     line-height: 1.17;
     letter-spacing: 0.03em;
 
-    @media screen and (min-width: $desktop) {
+    @media screen and (min-width: 1280px) {
         font-size: 14px;
         line-height: 1.71;
     }
@@ -197,16 +197,16 @@
     margin-right: 7px;
     width: 16px;
     height: 15px;
-    box-shadow: 0 0 0 0.1em $header-color;
+    box-shadow: 0 0 0 0.1em red;
     border-radius: 2px;
-    background-color: $secondary-text-color;
+    background-color: black;
 
     .checkbox:checked+& {
-        background-color: $accent-color;
-        background-image: url(../images/icon-check.svg);
+        background-color: blue;
+        // background-image: url(../images/icon-check.svg);
         background-size: contain;
         background-origin: border-box;
-        box-shadow: 0 0 0 0.1em $accent-color;
+        box-shadow: 0 0 0 0.1em blue;
     }
 
     .checkbox:focus+& {
@@ -220,8 +220,3 @@
     justify-content: center;
 }
 
-.modal-form__submit-button {
-    @extend %button;
-    padding-left: 55px;
-    padding-right: 55px;
-}
