--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -2,15 +2,112 @@
 <section class="section">
   <div class="container-contacts">
     <h2 class="section-title visually-hidden">Our contacts</h2>
-
-    <ul class="contacts">
-      <li class="contacts__item">
-        <div class="contacts__card">
-          <p class="contacts__name">CAFE</p>
-        </div>
-      </li>
-      <li class="contacts__item"></li>
-      <li class="contacts__item"></li>
-    </ul>
+    <div class="contacts">
+      <ul class="catering__list">
+        <li class="catering__item">
+          <div class="cater-card">
+            <p class="catering__name catering__name_beige">CAFE</p>
+            <div class="cater-card__list">
+              <div class="cater-place">
+                <p class="cater-place__name">Chicago</p>
+                <p class="cater-place__text">
+                  Fusce ut velit laoreet, tempus arcu molestie vulputate
+                </p>
+              </div>
+              <div class="cater-time">
+                <ul class="cater-time__list">
+                  <li class="cater-time__item">
+                    <p class="cater-time__name">Monday - Friday</p>
+                    <p class="cater-time__time">06:00 AM - 10:00 PM</p>
+                  </li>
+                  <li class="cater-time__item">
+                    <p class="cater-time__name">Saturday - Sunday</p>
+                    <p class="cater-time__time">08:00 AM - 10:00 PM</p>
+                  </li>
+                </ul>
+              </div>
+              <ul class="cater-cont">
+                <li class="cater-cont__item">
+                  <p class="cater-cont__link">+61&#40;0&#41; 383 766 284</p>
+                </li>
+                <li class="cater-cont__item">
+                  <p class="cater-cont__link">noreply@envato.com</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <li class="catering__item">
+          <div class="cater-card">
+            <p class="catering__name catering__name_green">FOODTRUCK</p>
+            <div class="cater-card__list">
+              <div class="cater-place">
+                <p class="cater-place__name">Los Angeles</p>
+                <p class="cater-place__text">
+                  Fusce ut velit laoreet, tempus arcu molestie vulputate
+                </p>
+              </div>
+              <div class="cater-time">
+                <ul class="cater-time__list">
+                  <li class="cater-time__item">
+                    <p class="cater-time__name">Monday - Friday</p>
+                    <p class="cater-time__time">06:00 AM - 10:00 PM</p>
+                  </li>
+                  <li class="cater-time__item">
+                    <p class="cater-time__name">Saturday - Sunday</p>
+                    <p class="cater-time__time">08:00 AM - 10:00 PM</p>
+                  </li>
+                </ul>
+              </div>
+              <ul class="cater-cont">
+                <li class="cater-cont__item">
+                  <p class="cater-cont__link">+61&#40;0&#41; 383 766 284</p>
+                </li>
+                <li class="cater-cont__item">
+                  <p class="cater-cont__link">noreply@envato.com</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <li class="catering__item">
+          <div class="cater-card">
+            <p class="catering__name catering__name_beige">CAFE</p>
+            <div class="cater-card__list">
+              <div class="cater-place">
+                <p class="cater-place__name">New York</p>
+                <p class="cater-place__text">
+                  Fusce ut velit laoreet, tempus arcu molestie vulputate
+                </p>
+              </div>
+              <div class="cater-time">
+                <ul class="cater-time__list">
+                  <li class="cater-time__item">
+                    <p class="cater-time__name">Monday - Friday</p>
+                    <p class="cater-time__time">06:00 AM - 10:00 PM</p>
+                  </li>
+                  <li class="cater-time__item">
+                    <p class="cater-time__name">Saturday - Sunday</p>
+                    <p class="cater-time__time">08:00 AM - 10:00 PM</p>
+                  </li>
+                </ul>
+              </div>
+              <ul class="cater-cont">
+                <li class="cater-cont__item">
+                  <p class="cater-cont__link">+61&#40;0&#41; 383 766 284</p>
+                </li>
+                <li class="cater-cont__item">
+                  <p class="cater-cont__link">noreply@envato.com</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </li>
+      </ul>
+      <div class="cater-btn">
+        <button type="button" class="btn cater-btn__locat" data-modal-open>Our Locations</button>
+        <button type="button" class="btn cater-btn__franch" data-modal-open>Franchise</button>
+      </div>
+    </div>
   </div>
 </section>
