--- a/src/sass/layout/_our-location-modal.scss
+++ b/src/sass/layout/_our-location-modal.scss
@@ -220,3 +220,18 @@
     justify-content: center;
 }
 
+/* Set the size of the div element that contains the map */
+#map {
+    height: 400px;
+    /* The height is 400 pixels */
+    width: 100%;
+    /* The width is the width of the web page */
+}
+
+/* Set the size of the div element that contains the map */
+#map {
+    height: 400px;
+    /* The height is 400 pixels */
+    width: 100%;
+    /* The width is the width of the web page */
+}
