--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -28,10 +28,16 @@
               </div>
               <ul class="cater-cont">
                 <li class="cater-cont__item">
-                  <p class="cater-cont__link">+61&#40;0&#41; 383 766 284</p>
+                  <a href="tel:+610383766284" class="cater-cont__link cater-cont__link__tel"
+                    >+61&#40;0&#41; 383 766 284</a
+                  >
                 </li>
                 <li class="cater-cont__item">
-                  <p class="cater-cont__link">noreply@envato.com</p>
+                  <a
+                    href="mailto:noreply@envato.com"
+                    class="cater-cont__link cater-cont__link__mail"
+                    >noreply@envato.com</a
+                  >
                 </li>
               </ul>
             </div>
@@ -61,10 +67,16 @@
               </div>
               <ul class="cater-cont">
                 <li class="cater-cont__item">
-                  <p class="cater-cont__link">+61&#40;0&#41; 383 766 284</p>
+                  <a href="tel:+610383766284" class="cater-cont__link cater-cont__link__tel"
+                    >+61&#40;0&#41; 383 766 284</a
+                  >
                 </li>
                 <li class="cater-cont__item">
-                  <p class="cater-cont__link">noreply@envato.com</p>
+                  <a
+                    href="mailto:noreply@envato.com"
+                    class="cater-cont__link cater-cont__link__mail"
+                    >noreply@envato.com</a
+                  >
                 </li>
               </ul>
             </div>
@@ -94,10 +106,16 @@
               </div>
               <ul class="cater-cont">
                 <li class="cater-cont__item">
-                  <p class="cater-cont__link">+61&#40;0&#41; 383 766 284</p>
+                  <a href="tel:+610383766284" class="cater-cont__link cater-cont__link__tel"
+                    >+61&#40;0&#41; 383 766 284</a
+                  >
                 </li>
                 <li class="cater-cont__item">
-                  <p class="cater-cont__link">noreply@envato.com</p>
+                  <a
+                    href="mailto:noreply@envato.com"
+                    class="cater-cont__link cater-cont__link__mail"
+                    >noreply@envato.com</a
+                  >
                 </li>
               </ul>
             </div>
@@ -105,8 +123,18 @@
         </li>
       </ul>
       <div class="cater-btn">
-        <button type="button" class="btn cater-btn__locat" data-modal-open>Our Locations</button>
-        <button type="button" class="btn cater-btn__franch" data-modal-open>Franchise</button>
+        <button type="button" class="btn cater-btn__locat">
+          Our Locations
+          <svg class="cater-btn__icons" width="8" height="16">
+            <use href="./images/icons/icons.svg#icon-btn-vector-white"></use>
+          </svg>
+        </button>
+        <button type="button" class="btn cater-btn__franch">
+          Franchise
+          <svg class="cater-btn__icons" width="8" height="16">
+            <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
+          </svg>
+        </button>
       </div>
     </div>
   </div>
