--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -95,30 +95,45 @@
         margin-bottom: 8px;
     }
 }
+a {
+    text-decoration: none;
+}
 .cater-cont {
     
     width: 179px;
     height: 38px;
     @include font(500, 12px, 18px, null);
-    color: #907E82;
+    
+}
+.cater-cont__link {
+&__mail,
+&__tel {
+    color: var(--secondary-text-color);
+    transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+    &:hover,
+    &:focus {
+        color: var(--accent-text-color);
+    }
+}
 .cater-btn {
-    
     border-radius: 22px;
- 
-    
     &__locat {
     @include btn-color( #FFFFFF,#D41342, #D41342);
-    @include btn-form(161px, 44px, 22px);
+    @include btn-form(162px, 44px, 22px);
     @include indents(0, 0, auto, auto);
     @include font(700, 16px, 21px, null);
     margin-bottom: 10px;
 }
     &__franch { 
-    @include btn-form(161px, 44px, 22px);
+    @include btn-form(162px, 44px, 22px);
     @include indents(0, 0, auto, auto);
     @include font(700, 16px, 21px, null);
     @include btn-color(#D41443, #FFFFFF, #ECEBEB);
 }
+}
+.cater-btn__icons {
+    margin-left: 13px;
+    fill: currentColor;
 }
