feature/customer-reviews
Полная секция со слайдером секцию со слайдером

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -2,29 +2,56 @@
   <div class="container">
     <div class="slider">
       <div class="slider__item">
-        <img src="./images/img/face1_1x.png" alt="First reviewer photo" class="slider__img" />
-        <p class="slider__text">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
-          nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-        </p>
+        <img
+          srcset="./images/img/face1_1x.png 1x, ./images/img/face1_2x.png 2x"
+          src="./images/img/face1_1x.png"
+          alt="First reviewer photo"
+          class="slider__img"
+        />
+        <div class="slider__wrapper">
+          <div class="slider__gradient">
+            <p class="slider__text">
+              Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+              hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+            </p>
+          </div>
+        </div>
         <p class="slider-dots__text">Emily, Los Angeles</p>
       </div>
 
       <div class="slider__item">
-        <img src="./images/img/face2_1x.png" alt="Second reviewer photo" class="slider__img" />
-        <p class="slider__text">
-          In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.
-        </p>
+        <img
+          srcset="./images/img/face2_1x.png 1x, ./images/img/face2_2x.png 2x"
+          src="./images/img/face2_1x.png"
+          alt="Second reviewer photo"
+          class="slider__img"
+        />
+        <div class="slider__wrapper">
+          <div class="slider__gradient">
+            <p class="slider__text">
+              In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+              Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.
+            </p>
+          </div>
+        </div>
         <p class="slider-dots__text">Alexa, New-York</p>
       </div>
 
       <div class="slider__item">
-        <img src="./images/img/face3_1x.png" alt="Third" class="slider__img" />
-        <p class="slider__text">
-          Quisque cursus et, porttitor risus. Aliquam sem. Nullam viverra consectetuer. In hendrerit
-          nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-        </p>
+        <img
+          srcset="./images/img/face3_1x.png 1x, ./images/img/face3_2x.png 2x"
+          src="./images/img/face3_1x.png"
+          alt="Third"
+          class="slider__img"
+        />
+        <div class="slider__wrapper">
+          <div class="slider__gradient">
+            <p class="slider__text">
+              Quisque cursus et, porttitor risus. Aliquam sem. Nullam viverra consectetuer. In
+              hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+            </p>
+          </div>
+        </div>
         <p class="slider-dots__text">Sandra, Denver</p>
       </div>
 
