--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -1,6 +1,4 @@
 <section class="hero-header">
-<header class="header">
-<div class="header__container">
 <nav class="nav">
     <a href="" class="logo">
         <img srcset="./images/img/logo_1x.png 1x, ./images/img/logo_2x.png 2x" src="./images/img/logo_1x.png" alt="Icecream logo" width="199" height="50">
@@ -11,9 +9,12 @@
         </svg>
 </button>
 </nav>
-</div>
-</header>
-<div class="hero">
-    <h1 class="hero-title">ice cream made with <span class="hero-title__accent">passion></span></h1>
+<h1 class="hero-title">ice cream made with <span class="hero-title__current">passion</span></h1>
+<svg class="hero-ellipse" width="346" height="344">
+    <use href="./images/icons/icons.svg#icon-ellipse"></use>
+</svg>
+<div class="button-wrap">
+    <button type="button" class="hero-primary-btn btn">Products</button>
+    <button type="button" class="hero-secondary-btn btn">How it's made</button>
 </div>
 </section>
