--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,17 +2,27 @@
     <div class="container">
         <p class="about__pre-title">tradition and love</p>
         <h2 class="title">how it’s made?</h2>
-        <div class="about-text">
-            <p class="about-text__description-top">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus,
-                faucibus lorem eget, egestas eros.
-                Maecenas eleifend erat at justo fringilla.</p>
-            <p class="about-text__description-bottom">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris
-                rhoncus orci in imperdiet placerat.
-                Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.<br />
-                <br />
-                Aliquam erat volutpat. Aenean accumsan.
-            </p>
+        <div class="about-box">
+            <picture>
+                <source srcset="./images/img/m1-desk_1x.png 1x, ./images/img/m1-desk_2x.png 2x" media="(min-width: 1280px)" />
+                <source srcset="./images/img/m1-tab_1x.png 1x, ./images/img/m1-tab_2x.png 2x" media="(min-width: 768px)" />
+                <source srcset="./images/img/m1-mob_1x.png 1x, ./images/img/m1-mob_2x.png 2x" media="(max-width: 767px)" />
+                <img src="./images/img/m1-desk_1x.png" alt="Cow and milk">
+            </picture>
+            <div class="about-text">
+                <p class="about-text__description-top">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+                    cursus,
+                    faucibus lorem eget, egestas eros.
+                    Maecenas eleifend erat at justo fringilla.</p>
+                <p class="about-text__description-bottom">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+                    Mauris
+                    rhoncus orci in imperdiet placerat.
+                    Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.<br />
+                    <br />
+                    Aliquam erat volutpat. Aenean accumsan.
+                </p>
+                <button type="button" class="bnt btn__header">Read more</button>
+            </div>
         </div>
-        <button type="button" class="bnt btn__header">Read more</button>
     </div>
 </section>
