--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <!-- Contacts -->
-<section class="section">
+<section class="section-contacts">
   <div class="container-contacts">
     <h2 class="section-title visually-hidden">Our contacts</h2>
     <div class="contacts">
