--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,5 +1,5 @@
 <section class="section section--advantages-background section--advantages-padding">
-  <div class="container container-adventages">
+  <div class="container container--advantages-padding">
     <h2 class="section__title visually-hidden">Advantages</h2>
     <ul class="advantages">
       <li class="advantages__item">
