--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,12 +1,12 @@
-.section--advantages-background{background-color: #FFF5F6;}
+.section--advantages-background{background-color: var(--secondary-bg-color);}
 
 .section--advantages-padding{ padding-bottom: 80px;
 @media screen and (min-width: 1280px){
     padding-bottom: 120px;}}
-
-.container-adventages{ 
-    @media screen and (min-width: 1280px){
-        width: 1280px;}}
+    
+.container--advantages-padding{
+    @media screen and (min-width: 768px) and (max-width: 1279px){padding: 0 32px;}
+}
 
 .advantages{@media screen and (min-width: 768px) {
    display: flex;
@@ -17,83 +17,92 @@
     margin-left: calc(-1 * 106px);
 }}
 
-
-
 .advantages__item{@media screen and (min-width: 768px){
-   
     margin-left:32px;} 
     @media screen and (min-width: 1280px) {
         margin-left: 106px;
     }
-   
-}
-
-
-
-.advantages__item:not(:last-child){
-    margin-bottom: 32px;
-
-    @media screen and (min-width: 768px){margin-bottom: 0;}
-}
-
-.advantages__item:first-child::before {
+    
+    &:not(:last-child) {
+        margin-bottom: 32px;
+    
+        @media screen and (min-width: 768px) {
+            margin-bottom: 0;
+        }
+   }
+   &:first-child::before {
     content: "";
     display: block;
     background-image: url(../images/img/adv-icon-1.png);
 
     width: 33px;
     height: 50px;
-}
-.advantages__item::before {
+   }
+   &::before {
     content: "";
     display: block;
     background-image: url(../images/img/adv-icon-2.png);
 
     width: 50px;
     height: 50px;
-}
-.advantages__item:last-child::before {
+   }
+   &:last-child::before {
     content: "";
     display: block;
     background-image: url(../images/img/adv-icon-3.png);
 
     width: 44px;
     height: 50px;
+   }
 }
-
 
 .advantages__text{
     font-weight: 700;
     font-size: 12px;
     line-height: 1.66;
     letter-spacing: 0.04em;
-    
 
+    color: var(--basic-text-color);
+    
+    margin-top: 13px;
     width: 230px;
     
     @media screen and (min-width: 768px){
+        font-size: 14px;
+        line-height: 1.71;
         width: 170px;
-   }
+        
+        }
     @media screen and (min-width: 1280px) {
+        font-size: 16px;
+        line-height: 1.75;
         width: 288px;
-    }
+        margin-top: 16px;
+        }
     
 }
-
 
 .advantages-text{
     font-family: 'Titan One',
     cursive;
+    font-weight: 400;
     font-size: 36px;
     line-height: 1.13;
     letter-spacing: 0.04em;
 
     color: var(--accent-text-color);
     margin-top: 16px;
-    margin-bottom: 13px;
-    @media screen and (min-width: 768px){margin-top: 36px;}
+    
+    @media screen and (min-width: 768px){
+        font-size: 48px;
+        line-height: 1.14;
+        margin-top: 36px;
+        
+    }
     @media screen and (min-width: 1280px){
+        font-size: 58px;
+        line-height: 1.13;
         margin-top: 40px;
-        margin-bottom: 16px;}
+        }
     
 }
