--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,7 +1,7 @@
 <section class="about">
     <div class="container">
         <p class="about__pre-title">tradition and love</p>
-        <h2 class="title">how it’s made?</h2>
+        <h2 class="about__title">how it’s made?</h2>
         <div class="about-box">
             <picture>
                 <source srcset="./images/img/m1-desk_1x.png 1x, ./images/img/m1-desk_2x.png 2x" media="(min-width: 1280px)" />
@@ -21,7 +21,11 @@
                     <br />
                     Aliquam erat volutpat. Aenean accumsan.
                 </p>
-                <button type="button" class="bnt btn__header">Read more</button>
+                <button type="button" class="bnt btn-about">Read more 
+                    <svg class="bnt-about__icon" width="4.43" height="8">
+                        <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
+                    </svg>
+                </button>
             </div>
         </div>
     </div>
