--- a/src/partials/our-location-modal.html
+++ b/src/partials/our-location-modal.html
@@ -1,25 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <button class="btn__modal" type="button" data-modal-open>our-location-modal</button>
-
-    <!-- start модальное окно  -->
-    <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
-        <button class="modal__close-button" type="button" data-modal-close>
-          <!-- <svg class="modal__close-icon" width="18" height="18">
-        <use href="./images/icons.svg#icon-close"></use>
-      </svg> -->
-        </button>
-        <div id="map"></div>
-      </div>
+<!-- start модальное окно  -->
+<div class="backdrop is-hidden" data-modal-map>
+  <div class="modal">
+    <button class="modal__close-button" type="button" data-modal-map-close>
+      <svg class="modal__close-icon" width="14" height="14">
+        <use href="./images/icons/icons.svg#icon-close"></use>
+      </svg>
+    </button>
+    <div class="map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387193.30596698663!2d-74.25986773739224!3d40.697149413874705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a9b3117469%3A0xd134e199a405a163!2z0K3QvNC_0LDQudGALdGB0YLQtdC50YIt0LHQuNC70LTQuNC90LM!5e0!3m2!1sru!2sua!4v1648975581924!5m2!1sru!2sua"
+        width="100%"
+        height="100%"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
     </div>
-    <!-- end модальное окно  -->
-  </body>
-</html>
+  </div>
+</div>
+<!-- end модальное окно  -->
