--- a/src/sass/layout/_our-location-modal.scss
+++ b/src/sass/layout/_our-location-modal.scss
@@ -30,7 +30,8 @@
 .modal {
     position: relative;
     width: 100%;
-    padding: 40px;
+    height: 500px;
+    padding: 5px;
 
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -41,15 +42,19 @@
         opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     @media screen and (min-width: 480px) {
-        max-width: 450px;
+        max-width: 460px;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%) scale(1);
     }
 
+    @media screen and (min-width: 768px) {
+        max-width: 748px;
+    }
+
     @media screen and (min-width: 1280px) {
-        max-width: 528px;
+        max-width: 1260px;
     }
 }
 
@@ -63,7 +68,7 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     cursor: pointer;
-    background-color: #ffffff;
+    background-color: #E17992;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
@@ -73,6 +78,8 @@
 }
 
 .modal__close-icon {
+    stroke: #fff;
+    stroke-width: 5;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -85,153 +92,10 @@
     pointer-events: none;
 }
 
-.modal-form__header {
-    margin-bottom: 12px;
+// Google map
 
-    font-size: 20px;
-    line-height: 1.5;
-    text-align: center;
-    letter-spacing: 0.03em;
 
-    color: red;
-
-    @media screen and (min-width: 1280px) {
-        line-height: 1.15;
-    }
-}
-
-.modal-form__box {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-
-    color: black;
-}
-
-.modal-form__label {
-    margin-bottom: 4px;
-}
-
-.modal-form__thumb {
-    position: relative;
-}
-
-.modal-form__input {
-    height: 40px;
-    padding: 11px 12px;
-    padding-left: 42px;
+.map {
+    height: 100%;
     width: 100%;
-
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    box-sizing: border-box;
-    border-radius: 4px;
-    transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:focus {
-        outline-color: blue;
-    }
-}
-
-.modal-form__input-icon {
-    position: absolute;
-    top: 11px;
-    left: 12px;
-    fill: red;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    .modal-input:focus+& {
-        fill: blue;
-    }
-}
-
-.modal-form__box--comment {
-    margin-bottom: 20px;
-}
-
-.modal-form__textarea {
-    width: 100%;
-    height: 120px;
-    padding: 12px 16px;
-
-    resize: none;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    box-sizing: border-box;
-    border-radius: 4px;
-
-    &:focus {
-        outline-color: blue;
-    }
-
-    &::placeholder {
-        font-size: 12px;
-        line-height: 1.16;
-        letter-spacing: 0.01em;
-
-        color: rgba(117, 117, 117, 0.5);
-    }
-}
-
-.modal-form__checkbox-label {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
-
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-
-    @media screen and (min-width: 1280px) {
-        font-size: 14px;
-        line-height: 1.71;
-    }
-}
-
-.checkbox__icon {
-    display: block;
-    flex-shrink: 0;
-    margin-right: 7px;
-    width: 16px;
-    height: 15px;
-    box-shadow: 0 0 0 0.1em red;
-    border-radius: 2px;
-    background-color: black;
-
-    .checkbox:checked+& {
-        background-color: blue;
-        // background-image: url(../images/icon-check.svg);
-        background-size: contain;
-        background-origin: border-box;
-        box-shadow: 0 0 0 0.1em blue;
-    }
-
-    .checkbox:focus+& {
-        box-shadow: 0 0 0 2px black;
-    }
-}
-
-.modal-form__submit-button-box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/* Set the size of the div element that contains the map */
-#map {
-    height: 400px;
-    /* The height is 400 pixels */
-    width: 100%;
-    /* The width is the width of the web page */
-}
-
-/* Set the size of the div element that contains the map */
-#map {
-    height: 400px;
-    /* The height is 400 pixels */
-    width: 100%;
-    /* The width is the width of the web page */
 }
