--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,7 @@
 <!-- Contacts -->
 <section class="section-contacts">
-  <div class="container-contacts">
-    <h2 class="section-title visually-hidden">Our contacts</h2>
+  <div class="container container-contacts">
+    <h2 class="section__title visually-hidden">Our contacts</h2>
     <div class="contacts">
       <ul class="catering__list">
         <li class="catering__item">
