--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,51 +1,46 @@
 .section-contacts {
- 
-    background-image: linear-gradient(#E5E5E5 22%, #FFF5F6 22%);
+     background-image: linear-gradient(#E5E5E5 22%, #FFF5F6 22%);
         @include media ($tab) {
          background-image: linear-gradient(#E5E5E5 19%, #FFF5F6 19%);
-           
         }
     @include media ($desk) {
         margin: 0 auto;
-        max-width: 1600px;
+        // max-width: 1600px;
         background-image: linear-gradient(#E5E5E5 14%, #FFF5F6 14%);
-
-    }
-
+     }
 }
 .container-contacts {
     margin: 0 auto;
-    height: 1454px;
+    // height: 1454px;
     padding:0 20px 48px 20px;    
     justify-content: center;
     @include media ($mob) {
         width: $mob;
     }
-
     @include media ($tab) {
         width: $tab;
-        height: 652px;
+        // height: 652px;
         padding: 0 16px 40px 16px;
     }
-
     @include media ($desk) {
         width: $desk;
-        height: 760px;
+        // height: 760px;
         padding-bottom: 120px;
-        
     }
-            
-}
+ }
 
 .catering__list {
+    max-width: $mob;
     margin-bottom: 32px;
     @include media ($tab) {
+        max-width: $tab;
       margin-bottom: 40px;  
         display: flex;
         flex-wrap: wrap;        
     }
     
     @include media ($desk) {
+        max-width: $desk;
         margin-bottom: 60px; 
     }
    
@@ -53,8 +48,8 @@
 
 .catering__item {
    margin: 0 auto;
-   width: 280px;
-   height: 412px;
+//    width: 280px;
+//    height: 412px;
    border-radius: 24px;
    box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
    
@@ -65,18 +60,15 @@
 }
     @include media ($tab) {
     margin-bottom: 0px;
-    height: 528px;
+    // height: 528px;
     width: calc((100% - 64px) / 3);
     &:not(:last-child) {
         margin-bottom: 0px;
-    }
-    
+    }   
 }
-
     @include media ($desk) {
     padding: 40px 40px;
-    height: 538px;
-    
+    // height: 538px;
 }
 }
 .cater-card {
@@ -176,18 +168,18 @@ a {
 }
 .cater-cont {
     
-    width: 179px;
-    height: 38px;
+    // width: 179px;
+    // height: 38px;
     @include font(500, 12px, 18px, null);
 @include media ($tab) {
     @include font(500, 14px, 26px, null);
-    width: 159px;
-    height: 48px;
+    // width: 159px;
+    // height: 48px;
 }
     @include media ($desk) {
         @include font(500, 16px, 29px, null);
-        width: 243px;
-        height: 50px;
+        // width: 243px;
+        // height: 50px;
     }
 }
 .cater-cont__link {
