fixed container and padding

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,6 @@
 <!-- Contacts -->
 <section class="section-contacts">
-  <div class="container container-contacts">
+  <div class="container">
     <h2 class="section__title visually-hidden">Our contacts</h2>
     <div class="contacts">
       <ul class="catering__list">
