data-modal-map-open

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -123,7 +123,7 @@
         </li>
       </ul>
       <div class="cater-btn">
-        <button type="button" class="btn cater-btn__locat">
+        <button type="button" class="btn cater-btn__locat" data-modal-map-open>
           Our Locations
           <svg class="cater-btn__icons" width="8" height="16">
             <use href="./images/icons/icons.svg#icon-btn-vector-white"></use>
