add ice and width in title--one, change teg a

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,27 +1,27 @@
 <footer class="footer">
     <div class="footer__parts container">
         <div class="footer-title part">
-            <p class="footer__title--one">homemade cream made</p>
+            <p class="footer__title--one">homemade ice cream made</p>
             <p class="footer__title--two">with passion</p>
         </div>
         <div class="footer__contact part">
             <ul class="footer__sms list">
                 <li class="footer__site">
-                    <a href="" class="footer__link link">
+                    <a href="https://github.com" target="_blank" rel="noopener noreferrer nofollow" class="footer__link link">
                         <svg class="footer__icons">
                             <use href="./images/icons/icons.svg#icon-github"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer__site">
-                    <a href="" class="footer__link link">
+                    <a href="https://web.telegram.org"  target="_blank" rel="noopener noreferrer nofollow" class="footer__link link">
                         <svg class="footer__icons">
                             <use href="./images/icons/icons.svg#icon-telegram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer__site">
-                    <a href="" class="footer__link link">
+                    <a href="https://www.facebook.com"  target="_blank" rel="noopener noreferrer nofollow" class="footer__link link">
                         <svg class="footer__icons">
                             <use href="./images/icons/icons.svg#icon-facebook"></use>
                         </svg>
